--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 						<p>
 							Vertex is a great one page responsive HTML5/CSS3 portfolio theme which looks stunning on any device. It is a clean modern theme with background slider, off-canvas (Hamburger) navigation, filterable portfolio, clients testimonials carousel, google maps integration, google fonts integration, 400+ FontAwesome vector icons and so much more.
 						</p>
-						<a href="https://github.com/Sleep-Less-Coder/Vertex" target="_blank" class="download-btn"><i class="fa fa-clock-o"></i>Download (GitHub)</a>
+						<a href="https://github.com/Sleep-Less-Coder/Vertex" target="_blank" class="download-btn"><i class="fa fa-download"></i>Download (GitHub)</a>
 					</div>
 				</div>
 			</div>
