--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 									</span>
 								</li>
 							</ul>
+							<div class="notice">
+								<p><i class="fa fa-trophy"></i> PixelHunter was featured by wordpress.org on Sept 24 2015.</p>
+							</div>
 						</div>
 						
 						<div class="row">
@@ -119,7 +122,7 @@
 							</ul>
 
 							<div class="notice">
-								<p><i class="fa fa-star"></i> TechNews was featured on the home page of wordpress.org on Feb 14 2015.</p>
+								<p><i class="fa fa-trophy"></i> TechNews was featured by wordpress.org on Feb 14 2015.</p>
 							</div>
 						</div>
 						
@@ -227,24 +230,24 @@
 							<h3>Screenshots</h3>
 							<div class="row img-grid">
 								<div class="col-md-4">
-									<a href="assets/img/projects/pms/pms1.png"><img src="assets/img/projects/pms/pms1.png"></a>
+									<a href="assets/img/projects/pms/pms1.png"><img src="assets/img/projects/pms/thumbnails/thumbnail1.jpg"></a>
 								</div>
 								<div class="col-md-4">
-									<a href="assets/img/projects/pms/pms2.png"><img src="assets/img/projects/pms/pms2.png"></a>
+									<a href="assets/img/projects/pms/pms2.png"><img src="assets/img/projects/pms/thumbnails/thumbnail2.jpg"></a>
 								</div>
 								<div class="col-md-4">
-									<a href="assets/img/projects/pms/pms3.jpg"><img src="assets/img/projects/pms/pms3.jpg"></a>
+									<a href="assets/img/projects/pms/pms3.jpg"><img src="assets/img/projects/pms/thumbnails/thumbnail3.jpg"></a>
 								</div>
 							</div>
 							<div class="row img-grid">
 								<div class="col-md-4">
-									<a href="assets/img/projects/pms/pms4.png"><img src="assets/img/projects/pms/pms4.png"></a>
+									<a href="assets/img/projects/pms/pms4.png"><img src="assets/img/projects/pms/thumbnails/thumbnail4.jpg"></a>
 								</div>
 								<div class="col-md-4">
-									<a href="assets/img/projects/pms/pms5.png"><img src="assets/img/projects/pms/pms5.png"></a>
+									<a href="assets/img/projects/pms/pms5.png"><img src="assets/img/projects/pms/thumbnails/thumbnail5.jpg"></a>
 								</div>
 								<div class="col-md-4">
-									<a href="assets/img/projects/pms/pms6.png"><img src="assets/img/projects/pms/pms6.png"></a>
+									<a href="assets/img/projects/pms/pms6.png"><img src="assets/img/projects/pms/thumbnails/thumbnail6.jpg"></a>
 								</div>
 							</div>
 						</div>
