Updated with AngularJS taskmanager

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<ul class="simpleTabsNavigation">
 				<li><a href="#">Web Development</a></li>
 				<li><a href="#">Software Development</a></li>
-				<li><a href="#">Random Code Stuff</a></li>
+				<li><a href="#">Code Stuff</a></li>
 			</ul>
 			<div class="simpleTabsContent">
 				<section class="portfolio">
@@ -257,6 +257,16 @@
 
 			<div class="simpleTabsContent">
 				<section class="portfolio">
+					<div class="project-single">
+						<h2>Taskmanager using AngularJS</h2>
+						<div class="project-desc">
+							<p>
+								This is a simple task manager using AngularJS where we can add new tasks, check the completed tasks, delete the tasks and search the tasks. It connects to the MySQL database where tasks are stored.
+							</p>
+							<a href="https://github.com/Sleep-Less-Coder/taskmanager" target="_blank" class="download-btn"><i class="fa fa-github"></i>See in GitHub</a>
+						</div>
+					</div>
+
 					<div class="project-single">
 						<h2>Simple Laravel 5 Blog</h2>
 						<div class="project-desc">
