Changed Hemant Acharya to Hemant

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</nav> -->
 
 				<div class="intro">
-					<h1>Hemant Acharya</h1>
+					<h1>Hemant</h1>
 					<h2>Web/Software developer and computer nerd</h2>
 					<p>
 						Hi! there, my name is Hemant Acharya. I am a web/software developer from Nepal who specialize in making responsive <strong>HTML5</strong> and <strong>CSS3</strong> templates, <strong>WordPress Themes</strong> and other web stuff. I do backend development as well mostly using <strong>PHP/Laravel</strong> and <strong>MySQL</strong>. I use cutting edge web development tools like <strong>Bootstrap</strong>, <strong>Grunt</strong>, <strong>SASS</strong>, etc to output the best possible solution. I do software development in C#.NET programming language. Stay connected by following me on Twitter <a href="http://twitter.com/hmnt235" target="_blank">@hmnt235</a>
