Added pig game project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<h1>Hemant Acharya</h1>
 					<h2>Web/Software developer and computer nerd</h2>
 					<p>
-						Hi! there, my name is Hemant Acharya. I am a web/software developer from Nepal who specialize in making responsive <strong>HTML5</strong> and <strong>CSS3</strong> templates, <strong>WordPress Themes</strong> and other web stuff. I do backend development as well mostly using <strong>PHP/Laravel</strong> and <strong>MySQL</strong>. I use cutting edge web development tools like <strong>Bootstrap</strong>, <strong>Grunt</strong>, <strong>SASS</strong>, etc to output the best possible solution. I do software development in C#.NET programming language. Stay connected by following me on Twitter <a href="http://twitter.com/hmnt235" target="_blank">@hmnt235</a>
+						Hi! there, my name is Hemant Acharya. I am a web/software developer based on Fairfax, Virginia, USA who specialize in making responsive <strong>HTML5</strong> and <strong>CSS3</strong> templates, <strong>JavaScript/AngularJS Apps</strong>, <strong>WordPress Themes</strong> and other web related stuff. I do backend web development as well mostly using <strong>PHP/Laravel</strong> and <strong>MySQL</strong>. I use cutting edge web development workflow and tools like <strong>Bootstrap</strong>, <strong>Grunt</strong>, <strong>Git</strong>, <strong>NPM</strong>, <strong>SASS</strong>, etc. to output the best possible solution. I do software development in <strong>C#.NET</strong> and <strong>JAVA</strong> programming language. Stay connected by following me on Twitter <a href="http://twitter.com/hmnt235" target="_blank">@hmnt235</a>
 					</p>
 					<button class="cta-btn"><i class="fa fa-briefcase"></i> See My Work</button>
 				</div>
@@ -40,6 +40,32 @@
 			</ul>
 			<div class="simpleTabsContent">
 				<section class="portfolio">
+					<div class="project-single">
+						<h2>Pig Game in Vanilla JavaScript</h2>
+						<div class="project-meta">
+							<!-- meta data of the project -->
+							<ul>
+								<li>
+									<span class="fa-stack fa-lg">
+										<i class="fa fa-circle-thin fa-stack-2x"></i>
+										<i class="fa fa-code fa-stack-1x" title="JavaScript"></i>
+									</span>
+								</li>
+							</ul>
+						</div>
+						<div class="row">
+							<div class="project-thumbnail col-md-6">
+								<img src="assets/img/projects/pig_game.png">
+							</div>
+							
+							<div class="project-desc col-md-6">
+								<p>
+									Pig game is a simple game coded entirely in vanilla JavaScript without any frameworks or libraries. The game has 2 players, playing in rounds. In each turn, a player rolls a dice as many times as he whishes. Each result get added to his round score. However, if the player rolls a 1, all his round score gets lost. After that, it's the next player's turn. The player can choose to 'Hold', which means that his round score gets added to his global score. After that, it's the next player's turn. The first player to reach 100 points on global score wins the game.
+								</p>
+								<a href="https://github.com/Sleep-Less-Coder/pig-game" target="_blank" class="download-btn"><i class="fa fa-github"></i>GitHub</a>
+							</div>
+						</div>
+					</div>
 					<div class="project-single">
 						<h2>PixelHunter</h2>
 						<div class="project-meta">
